Bug 285814 - Shortcut for moving mail to folder does not move to folder highlighted in dialog
Summary: Shortcut for moving mail to folder does not move to folder highlighted in dialog
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: commands and actions (other bugs)
Version First Reported In: 4.7
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-11-05 13:24 UTC by Thomas Grauschopf
Modified: 2011-11-07 15:21 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.7.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas Grauschopf 2011-11-05 13:24:55 UTC
Version:           4.7 (using KDE 4.7.2) 
OS:                Linux

When i wanted to move a mail from my inbox folder to another folder in old kmail, i used the 'm'-shortcut. It displayed a dialog where i chose the target folder. Usually, once i had my chosen an folder selected it was preselected the next time even after restart of kmail.

KMail2 does not correctly move a mail to the preselected entry.

Reproducible: Didn't try

Steps to Reproduce:
1. Use the 'm'-shortcut with a mail in the inbox folder highlighted.

2. Click some folder XYZ in the dialog with the mouse.

3. Press 'Enter'.

4. Restart KMail2.

5. Pressing 'm' with a mail in inbox highlighted.

6. The folder selection dialog is shown. It displays folder XYZ as preselected.

7. Press "Enter".

Actual Results:  
The mail is moved to the basis "KMail folder" and not to XYZ.

Expected Results:  
The mail should be moved to preselected XYZ folder.

If you click on the preselected entry XYZ with the mouse before pressing Enter, the mail is moved to the correct folder. Therefore, this seems to be a bug where the highlighting doesn't reflect the internal data, e.g. XYZ is highlighted, but internally "KMail folder" is stored as target. With the mouse click highlighted item and internally stored target getting synced.

(Most probably unrelated to this bug, mails in the basis "KMail folder" cannot be deleted or moved, only copied.)
Comment 1 Laurent Montel 2011-11-07 15:21:10 UTC
Git commit fb675a5a5310305cdd33a4f172febc1958723f72 by Montel Laurent.
Committed on 07/11/2011 at 16:20.
Pushed by mlaurent into branch 'master'.

Fix Bug 285814 - Shortcut for moving mail to folder does not move to folder highlighted in dialog

FIXED-IN: 4.7.4
BUG: 285814

M  +6    -6    mailcommon/foldertreewidget.cpp

http://commits.kde.org/kdepim/fb675a5a5310305cdd33a4f172febc1958723f72
Comment 2 Laurent Montel 2011-11-07 15:21:54 UTC
Git commit d8cbfef95c9646aa87c9d7e723840db07a5be89a by Montel Laurent.
Committed on 07/11/2011 at 16:20.
Pushed by mlaurent into branch 'KDE/4.7'.

Fix Bug 285814 - Shortcut for moving mail to folder does not move to folder highlighted in dialog

FIXED-IN: 4.7.4
BUG: 285814
(cherry picked from commit fb675a5a5310305cdd33a4f172febc1958723f72)

M  +6    -6    mailcommon/foldertreewidget.cpp

http://commits.kde.org/kdepim/d8cbfef95c9646aa87c9d7e723840db07a5be89a