Fix Bug 285814 - Shortcut for moving mail to folder does not move to folder highlighted in dialog

FIXED-IN: 4.7.4
BUG: 285814
(cherry picked from commit fb675a5a5310305cdd33a4f172febc1958723f72)